Explicit column instead of wrap for footer and padding fixes for faq

--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -41,9 +41,13 @@
 
 .footer-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+
+  @include for-size(tablet-portrait-up) {
+    flex-direction: row;
+  }
 
   padding: 1rem 1.5rem;
 }
