--- a/styles/sections/cars_insurance.module.scss
+++ b/styles/sections/cars_insurance.module.scss
@@ -10,7 +10,7 @@
 }
 
 .insurances {
-  padding: 1rem 0;
+  padding: 1rem 0.3rem;
 
   display: flex;
   flex-direction: column;
@@ -29,8 +29,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
-  padding: 0 1rem;
 }
 
 .insurance-top--expanded {
